--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,24 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- Dependências do JSF -->
+
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>7.0</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>5.3</version>
+		</dependency>
+
+
+
+
 	</dependencies>
 
 
