--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
 
 	</dependencies>
 	<build>
-
+		<finalName>carrinho-compras</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
