Internacionalização no backend

--- a/src/main/resources/mensagens.properties
+++ b/src/main/resources/mensagens.properties
@@ -1,10 +1,32 @@
-#Produto
-produto.descricao=Descrição
+####################################################### CAMPOS ################################################################################
+produto.descricao=Descrição do produto
 produto.preco=Preço
 produto.tipo=Tipo
 produto.lista=Lista de Produtos
-#Mensagens
-warning.descricao = É necessário selecionar um descrição
+produto.nome = Nome do produto
 
-#Botões
+cliente.email = E-Mail do usuário
+cliente.senha = Senha
+
+################ MENU
+menuitem.produtos = Produtos
+
+####################################################### LEGENDAS ##############################################################################
+cadastro.cliente = Cadastro de Cliente
+cadastro.produtos = CADASTRO DE PRODUTOS
+leg.login = Realizar Login
+
+#################################################### MENSAGENS DE AVISO #######################################################################
+warning.preco = O preço do produto está muito caro!
+warning.descricao = Campo descrição deve ser preenchido!
+
+
+########################################################### BOTÕES ############################################################################
 botao.salvar = Salvar
+botao.download = Download
+botao.entrar = Entrar
+botao.remover = Remover
+botao.finalizar.compra = Finalizar Compra
+botao.importar = Importar produtos
+botao.frete = Calcular Frete
+opcoes = Opções
