Adicionando template e cadastro de clientes

--- a/src/main/resources/mensagens.properties
+++ b/src/main/resources/mensagens.properties
@@ -7,6 +7,7 @@ produto.nome = Nome do produto
 
 cliente.email = E-Mail do usuário
 cliente.senha = Senha
+cliente.cpf = CPF
 
 ################ MENU
 menuitem.produtos = Produtos
@@ -19,6 +20,9 @@ leg.login = Realizar Login
 #################################################### MENSAGENS DE AVISO #######################################################################
 warning.preco = O preço do produto está muito caro!
 warning.descricao = Campo descrição deve ser preenchido!
+
+sucesso = Sucesso!
+salvo.sucesso = {0} - {1} salvo com sucesso!
 
 
 ########################################################### BOTÕES ############################################################################
