--- a/pom.xml
+++ b/pom.xml
@@ -61,11 +61,11 @@
 		<!-- <scope>compile</scope> -->
 		<!-- </dependency> -->
 		<!-- https://mvnrepository.com/artifact/org.primefaces.themes/home -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.primefaces.themes</groupId> -->
-<!-- 			<artifactId>home</artifactId> -->
-<!-- 			<version>1.0.10</version> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.primefaces.themes</groupId> -->
+		<!-- <artifactId>home</artifactId> -->
+		<!-- <version>1.0.10</version> -->
+		<!-- </dependency> -->
 
 
 		<dependency>
@@ -76,18 +76,20 @@
 		</dependency>
 
 		<!-- Para utilizar json -->
+
+		<!-- Web Service -->
+		<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>javax.ws.rs-api</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+		
+		<!-- Para utilizar json -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.8.0</version>
 		</dependency>
-
-		<!-- Web Service Correios -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.github.felipecaparelli</groupId> -->
-<!-- 			<artifactId>correios-client</artifactId> -->
-<!-- 			<version>1.0.1</version> -->
-<!-- 		</dependency> -->
 	</dependencies>
 	<build>
 		<finalName>carrinho-compras</finalName>
