--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,4 +14,21 @@
   <welcome-file-list>
 		<welcome-file>/index.xhtml</welcome-file>
 	</welcome-file-list>
+	
+	<!-- Evita que linhas comentadas sejam executadas -->
+	<context-param>
+		<param-name>facelets.SKIP_COMMENTS</param-name>
+		<param-value>true</param-value>
+	</context-param>
+	
+<!-- 	Definindo o tempo da sessão do usuário -->
+	<session-config>
+		<session-timeout>5</session-timeout>
+	</session-config>
+
+	<!-- Definindo o tema que vai ser aplicado no projeto -->
+	<context-param>
+		<param-name>primefaces.THEME</param-name>
+		<param-value>home</param-value>
+	</context-param>
 </web-app>
